# zuul-remastered

./: .gitignore  .gitmodules  LICENSE  README.md  main.c  meson.build
assets/: assets.json  home.tmj  house.tmj  map_tiles.tsj  player_tiles.tsj  player_tiles_entire_outfit_green.tsj  tiles.tsj  worldofzuul.world
assets/src/: Zuul-20240202-205641.piskel  map_tiles.aseprite  map_tiles.pxo  player_tiles-20240203-194630.piskel  player_tiles.aseprite  player_tiles.pxo  tiles-20240203-001604.piskel  zuul-logo.pxo  zuul.tiled-project  zuul.tiled-session
include/: app.h  assets.h  defs.h  draw.h  flag.h  init.h  input.h  map.h  network.h  player.h  structs.h  tileset.h
src/: assets.c  draw.c  init.c  input.c  main.c  map.c  network.c  player.c  server.c  tileset.c
tests/: map_test.c
